Minor tweaks Removing Tabzilla on small screens until we can fix

--- a/media/css/base.less
+++ b/media/css/base.less
@@ -48,10 +48,17 @@ body {
 	z-index: 2;
 }
 
+@media screen and (max-width: 900px) {
+	#tabzilla {
+		display: none;
+	}
+}
+
 .constrained {
 	max-width: 900px;
 	padding: 0 15px;
 	margin: 0 auto;
+	clear: both;
 }
 
 a:link,
